# PROYECTO_FINAL

./: README.md
agro_bringup/: CMakeLists.txt  package.xml
agro_bringup/config/: diff_drive_controller.yaml  diff_drive_controller_copy.yaml  dual_ekf_navsat_params.yaml  dual_ekf_navsat_params_real.yaml  topics_for_bridge.yaml
agro_bringup/launch/: bringup.launch.py  bringup_real.launch.py  dual_ekf_navsat.launch.py  dual_ekf_navsat_real.launch.py
agro_control/: CMakeLists.txt  package.xml
agro_control/scripts/: agro_control.py
agro_control/src/: agro_control.cpp
agro_description/: CMakeLists.txt  package.xml
agro_description/launch/: description.launch.py
agro_description/mesh/: base.stl  base_camara.stl  chassis.stl  rueda.stl  soporte.stl  wheel.stl
agro_description/rviz/: agro1.rviz  display.rviz
agro_description/urdf/: agro.urdf  agro.urdf.xacro  agro2.urdf  agro2.urdf.xacro  agro_test.urdf
agro_description/urdf/xacro/: base_camera.xacro  chassis.xacro  gazebo.xacro  properties.xacro  ros2_control.xacro  sensors.xacro  wheel.xacro
agro_gazebo/: CMakeLists.txt  package.xml
agro_gazebo/env-hooks/: agro_gazebo.sh.in
agro_gazebo/launch/: gz_sim.launch.py  sim.launch.py  spawn_robot.launch.py
agro_gazebo/models/: parcela.sdf
agro_gazebo/models/Hilera/: model.config  model.sdf
agro_gazebo/models/Malogrado/: model.config  model.sdf
agro_gazebo/models/Melon/: model.config  model.sdf
agro_gazebo/models/Parcela/: model.config  model.sdf
agro_gazebo/models/Verde/: model.config  model.sdf
agro_gazebo/models/Verde Limon/: model.config  model.sdf
agro_gazebo/rviz/: sim.rviz
agro_gazebo/scripts/: logger_waypoints.py  navigate_through_poses.py  plot2_odometry.py  plot3_odometry.py  plot4_odometry.py  plot_odometry.py  prueba_fusion.py  publish_gps_mapviz.py  remaping_mapviz_gps.py  remaping_mapviz_gps2.py  remaping_mapviz_rviz.py
agro_gazebo/world/: agro_vacio.sdf  agro_world.sdf  map1.mvc  map2.mvc  mazorca.sdf  parcela.sdf  test.sdf  test2.sdf  trees.sdf
agro_hardware_interfaces/: CMakeLists.txt  agro_hardware_interfaces.xml  package.xml
agro_hardware_interfaces/include/agro_hardware_interfaces/: agro_hardware_interface.hpp  visibility_control.hpp
agro_hardware_interfaces/src/: agro_hardware_interface.cpp
agro_interfaces/: CMakeLists.txt  package.xml
agro_interfaces/msg/: Motors.msg
agro_mapviz/: CMakeLists.txt  package.xml
agro_mapviz/config/: gps_wpf_demo.mvc  gps_wpf_demo3.mvc  gps_wpf_demo4.mvc
agro_mapviz/launch/: mapviz.launch.py  nav_robot.launch.py
agro_nav/cartographer_slam/config/: cartographer.lua
agro_nav/cartographer_slam/launch/: cartographer.launch.py
agro_nav/cartographer_slam/maps/: map.yaml
agro_nav/map_server/: granja.pgm
agro_nav/map_server/launch/: map_server.launch.py
agro_nav/map_server/maps/: granja.yaml  granja7x5.pgm  granja7x5.yaml  granja7x5_edit.pgm  granja_edit.pgm  map.pgm  plano.pgm  plano.yaml
agro_nav/path_planner_server/: package.xml
agro_nav/path_planner_server/config/: navigate_w_replanning_and_recovery_poses.xml
agro_nav/path_planner_server/config/real_robot/: planner_server.yaml
agro_nav/path_planner_server/config/sim_robot/: controller.yaml  planner_server.yaml  recovery.yaml
agro_nav/path_planner_server/launch/: entire_launch.launch.py  navigation.launch.py  pathplanner.launch.py
agro_nav/path_planner_server/rviz/: pathplanning.rviz
agro_sensors/: CMakeLists.txt  package.xml
agro_sensors/scripts/: gps_node.py  imu_node.py
agro_test/: CMakeLists.txt  package.xml
agro_test/scripts/: navegation_ekf_gps.py  navegation_ekf_gps2.py  plot3_odometry.py  plot_control.py  prueba2_fusion.py  test_line_ekf.py  test_rotate_odom.py  test_square.py  test_square_ekf.py  test_square_ekf2.py  test_vangular.py  test_vangular2.py
agro_test/world/: gps_wpf_demo2.mvc  map3.mvc  parcela.sdf
agro_vision/: CMakeLists.txt  package.xml
agro_vision/launch/: cacao_analysis.launch.py
agro_vision/scripts/: gradient.py  map_heat.py  map_heat2.py  tfcoordenadas.py  tfcoordenadas2.py  tfcoordenadas3.py  vision_node.py  vision_node2.py
doc/: git_commands.md  mciro_ros_agent.md  nav.md  ros_commands.md
micro_ros/Encoder_test/: platformio.ini
micro_ros/Encoder_test/src/: encoder.cpp  encoder.h  low_filter.h  main.cpp  motor.cpp  motor.h  motor_controller.cpp  motor_controller.h  pid.cpp  pid.h  ros_communication.cpp  ros_communication.h
